# Froststrap

./: .editorconfig  .gitignore  .gitmodules  .mailmap  CONTRIBUTING.md  Cargo.toml  Froststrap.slnx  Open to publish EXE.bat  README.md  flake.nix  justfile  typos.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci-debug.yml  ci-release.yml  sign.yml
Bloxstrap/: AccountManager.cs  App.xaml  App.xaml.cs  Bloxstrap.csproj  Bootstrapper.cs  CookiesManager.cs  FastFlagManager.cs  FpsUnlocker.cs  GBSEditor.cs  GlobalUsings.cs  Installer.cs  JsonManager.cs  LaunchHandler.cs  LaunchSettings.cs  MultiInstanceWatcher.cs  Paths.cs  RemoteData.cs  RobloxGlobalSettings.cs  Utilities.cs  Watcher.cs
Bloxstrap/AppData/: CommonAppData.cs  IAppData.cs  RobloxPlayerData.cs  RobloxStudioData.cs
Bloxstrap/Enums/: BackgroundMode.cs  BackgroundStretch.cs  CookieState.cs  (+9 more)
Froststrap/: App.axaml  App.axaml.cs  Bootstrapper.cs  CookiesManager.cs  FastFlagManager.cs  Froststrap.csproj  GBSEditor.cs  GlobalCache.cs  GlobalUsings.cs  HttpClientLoggingHandler.cs  Installer.cs  Logger.cs  MultiInstanceWatcher.cs  Paths.cs  Program.cs  RemoteData.cs  Utilities.cs  ViewLocator.cs
Froststrap.AvaloniaUI/: App.axaml  App.axaml.cs  Bootstrapper.cs  CookiesManager.cs  FastFlagManager.cs  Froststrap.AvaloniaUI.csproj  GlobalUsings.cs  Installer.cs  JsonManager.cs  LaunchHandler.cs  LaunchSettings.cs  Locale.cs  Logger.cs  Paths.cs  Program.cs  RemoteData.cs  Utilities.cs  ViewLocator.cs  Watcher.cs  app.manifest
crates/froststrap/: Cargo.toml
crates/froststrap/src/: main.rs
(+678 files in other folders)
